deployment/kubernetes/api-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: fastapi-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: fastapi

  template:

    metadata:
      labels:
        app: fastapi

    spec:

      containers:

      - name: fastapi

        image: enterprise-agentic-medical-ai:latest

        ports:
        - containerPort: 8000
