deployment/kubernetes/ollama-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: ollama

spec:

  replicas: 1

  selector:
    matchLabels:
      app: ollama

  template:

    metadata:
      labels:
        app: ollama

    spec:

      containers:

      - name: ollama

        image: ollama/ollama

        ports:
        - containerPort: 11434
