deployment/kubernetes/qdrant-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: qdrant

spec:

  replicas: 1

  selector:
    matchLabels:
      app: qdrant

  template:

    metadata:
      labels:
        app: qdrant

    spec:

      containers:

      - name: qdrant

        image: qdrant/qdrant

        ports:
        - containerPort: 6333
