deployment/kubernetes/api-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: fastapi-service

spec:

  selector:
    app: fastapi

  ports:

  - port: 80
    targetPort: 8000

  type: ClusterIP
